apply plugin: "java"
apply plugin: "idea"

tapestryVersion = "5.3.3-m1-SNAPSHOT"
testngVersion = "5.14.9"

group = "com.googlecode.tawus"
version = "1.0-SNAPSHOT"
sourceCompatibility = '1.5'
targetCompatibility = '1.5'

test {
  useTestNG()
  options.suites("src/test/conf/testng.xml")
  maxHeapSize = "400M"
  systemProperties["tapestry.service-reloading-enabled"] = "false"
  jvmArgs("-XX:MaxPermSize=512m")
  logging.captureStandardOutput LogLevel.INFO
  getLogging().setLevel(LogLevel.INFO)
}

repositories {
  mavenLocal()
  mavenCentral()
}

dependencies {
  compile "org.apache.tapestry:tapestry-core:$tapestryVersion"
  compile "org.apache.tapestry:tapestry-hibernate:$tapestryVersion"
  testCompile "org.apache.tapestry:tapestry-test:$tapestryVersion"
  compile "org.slf4j:slf4j-api:1.6.1"
  compile "org.slf4j:slf4j-log4j12:1.6.1"
  compile "com.h2database:h2:1.3.157"
  compile "javax.servlet:servlet-api:2.5"
}

idea {
  module {
    inheritOutputDirs = false
    outputDir = file("build/classes/main")
    testOutputDir = file('build/classes/test')

    downloadJavadoc = true
    downloadSources = true
  }
}
